--- a/.github/workflows/update-changeset.yml
+++ b/.github/workflows/update-changeset.yml
@@ -3,6 +3,7 @@ name: Update Changesets by Daily
 on:
   schedule:
     - cron: "0 */2 * * *"
+  workflow_dispatch:
 
 permissions:
   contents: write
