--- a/.github/workflows/update-changeset.yml
+++ b/.github/workflows/update-changeset.yml
@@ -33,5 +33,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "chore: update changesets"
+          git diff-index --quiet HEAD || git commit -m "chore: update changesets"
           git push origin main
