--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@natsuneko-laboratory/ui": "^0.1.10",
+    "@vercel/analytics": "^1.1.1",
     "clsx": "^2.0.0",
     "next": "14.0.4",
     "react": "^18",
